[metadata]
name = jenklint
version = 0.1.1
url = https://github.com/UIUCLibrary/jenlint
download_url = https://github.com/UIUCLibrary/jenlint
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Collection of tools and workflows for DS
long_description = file: README.rst
long_description_content_type = text/x-rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: University of Illinois/NCSA Open Source License

[options]
python_requires = >=3.6

[mypy]
python_version = 3.6
ignore_missing_imports = True

;[aliases]
;test = pytest

;[build_sphinx]
;source-dir = docs/source
;build-dir = docs/build
;all_files = 1

[sdist]
formats = zip,gztar
